Moved QuickStart notebook.
I want the docs/ directory for Sphinx documentation, so have moved
the notebook into a top-level notebooks/ directory.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -38,8 +38,8 @@ include sherpa/optmethods/tests/tstopt.hh
 include sherpa/sherpa.rc
 include sherpa/sherpa-standalone.rc
 
-# Quick Start Tutorial
-include docs/SherpaQuickStart.ipynb
+# IPython notebooks
+include notebooks/SherpaQuickStart.ipynb
 
 include sherpa/_version.py
 
