Placeholder index page.
Set up sphinx to create a web page. There is essentially no content
in this page.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ sherpa/optmethods/src/_minimmodule.c
 sherpa/optmethods/src/minpack/_minpack-f2pywrappers.f
 sherpa/optmethods/src/minpack/_minpackmodule.c
 
+# Sphinx documentation
+_build
+
 # VI
 *.swp
 
