Set up a build_sphinx target
Thanks to @olaurino for the pointers.

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,9 @@ build_ext = sherpa_config xspec_config build_ext
 develop = sherpa_config xspec_config develop
 test = develop test
 
+# Does this re-use previous aliases or do I need to be explicit?
+build_sphinx = sherpa_config xspec_config develop build_sphinx
+
 [sherpa_config]
 
 # Directory where the external dependencies must be installed.
