--- a/.travis.yml
+++ b/.travis.yml
@@ -51,8 +51,9 @@ matrix:
       python: "2.7"
     - env: FITS="astropy" INSTALL_TYPE=install TEST=package MATPLOTLIBVER=1.5 NUMPYVER=1.10
       python: "2.7"
-  allow_failures:
-    - env: XSPECVER="12.8.2q" FITS="astropy" INSTALL_TYPE=develop TEST=submodule MATPLOTLIBVER=1.5
+    # experimental support for using Sphinx to build the documentation
+    - env: FITS="astropy" INSTALL_TYPE=build_sphinx TEST=none MATPLOTLIBVER=1.5 NUMPYVER=1.10
+      python: "2.7"
 
 env: FITS="pyfits" INSTALL_TYPE=develop TEST=submodule MATPLOTLIBVER=1.4 # 1.5 does not support numpy 1.8, required by pyfits
 
@@ -100,6 +101,9 @@ before_install:
     fi
   - if [ ${TEST} == smoke ];
      then git submodule deinit -f .;
+    fi
+  - if [ ${INSTALL_TYPE} == build_sphinx ];
+     then conda install 'ipython<4.1' sphinx numpydoc;
     fi
 
 install:
