--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,12 @@ matrix:
       - python: "3.5"
   fast_finish: true
   include:
+    # Experimental support for using Sphinx to build the documentation
+    # Placed first since it is slow; so slow that it causes Travis to think
+    # there's a problem and error out the run:
+    #   https://travis-ci.org/sherpa/sherpa/jobs/127364198
+    # - env: FITS="astropy" INSTALL_TYPE=build_sphinx TEST=none MATPLOTLIBVER=1.5 NUMPYVER=1.10
+    #   python: "2.7"
     - env: XSPECVER="12.9.0i" FITS="astropy" INSTALL_TYPE=install TEST=smoke MATPLOTLIBVER=1.5
       python: "2.7"
       sudo: required
@@ -50,9 +56,6 @@ matrix:
     - env: FITS="astropy" INSTALL_TYPE=install TEST=package MATPLOTLIBVER=1.4 NUMPYVER=1.9
       python: "2.7"
     - env: FITS="astropy" INSTALL_TYPE=install TEST=package MATPLOTLIBVER=1.5 NUMPYVER=1.10
-      python: "2.7"
-    # experimental support for using Sphinx to build the documentation
-    - env: FITS="astropy" INSTALL_TYPE=build_sphinx TEST=none MATPLOTLIBVER=1.5 NUMPYVER=1.10
       python: "2.7"
 
 env: FITS="pyfits" INSTALL_TYPE=develop TEST=submodule MATPLOTLIBVER=1.4 # 1.5 does not support numpy 1.8, required by pyfits
