--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,9 @@ matrix:
   fast_finish: true
   include:
     # Experimental support for using Sphinx to build the documentation
-    # Placed first since it is slow; so slow that it causes Travis to think
-    # there's a problem and error out the run:
-    #   https://travis-ci.org/sherpa/sherpa/jobs/127364198
-    # - env: FITS="astropy" INSTALL_TYPE=build_sphinx TEST=none MATPLOTLIBVER=1.5 NUMPYVER=1.10
-    #   python: "2.7"
+    # Placed first as it is likely to be slow
+    - env: FITS="astropy" INSTALL_TYPE=build_sphinx TEST=none MATPLOTLIBVER=1.5 NUMPYVER=1.10
+      python: "2.7"
     - env: XSPECVER="12.9.0i" FITS="astropy" INSTALL_TYPE=install TEST=smoke MATPLOTLIBVER=1.5
       python: "2.7"
       sudo: required
@@ -106,7 +104,7 @@ before_install:
      then git submodule deinit -f .;
     fi
   - if [ ${INSTALL_TYPE} == build_sphinx ];
-     then conda install 'ipython<4.1' sphinx numpydoc;
+     then conda install --yes 'ipython<4.1' sphinx numpydoc;
     fi
 
 install:
