Initial attempt at using astropy_helpers: mixed results
The main problem is that I can not work out how to get the
auto-generated code to

  - be built in doc/api/

  - get referenced correctly

I think that I have some missing configuration option or setup
somewhere that is messing things up, but it's hard to track down
as the obvious (and not-very-obvious approaches, including hacking
a copy of astropy_helpers) have not really helped.

--- a/setup.cfg
+++ b/setup.cfg
@@ -101,3 +101,8 @@ build_sphinx = sherpa_config xspec_config develop build_sphinx
 #wcslib_libraries = wcs
 #gfortran_lib_dirs = None
 #gfortran_libraries = gfortran
+
+[build_sphinx]
+source-dir = docs
+build-dir = docs/_build
+all_files = 1
