Explicit install of astropy_helpers for Travis-CI
There are ways for this to be picked up automatically, but it is not
worth implementing them yet.

--- a/.travis.yml
+++ b/.travis.yml
@@ -105,6 +105,7 @@ before_install:
     fi
   - if [ ${INSTALL_TYPE} == build_sphinx ];
      then conda install --yes 'ipython<4.1' sphinx numpydoc;
+     pip install astropy_helpers;
     fi
 
 install:
