--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ matrix:
   include:
     # Experimental support for using Sphinx to build the documentation
     # Placed first as it is likely to be slow
-    - env: FITS="astropy" INSTALL_TYPE=build_sphinx TEST=none MATPLOTLIBVER=1.5 NUMPYVER=1.10
+    - env: XSPECVER="12.9.0i" FITS="astropy" INSTALL_TYPE=build_sphinx TEST=none MATPLOTLIBVER=1.5
       python: "2.7"
     - env: XSPECVER="12.9.0i" FITS="astropy" INSTALL_TYPE=install TEST=smoke MATPLOTLIBVER=1.5
       python: "2.7"
