--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -5,12 +5,13 @@ channels:
 
 dependencies:
 - astropy
-- astropy-helpers
 - bison
 - ipython
 - numpy>=1.6.0
 - numpydoc
 - matplotlib
 - sphinx
-- sphinx-rtd-theme
 
+pip:
+- astropy-helpers
+- sphinx-rtd-theme
