Move some dependencies to pip [ci skip]

--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -12,5 +12,6 @@ dependencies:
   - numpydoc
   - matplotlib
   - sphinx
-  - astropy-helpers
-  - sphinx-rtd-theme
+  - pip:
+      - astropy-helpers
+      - sphinx-rtd-theme
